--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                                                             </svg>
                                                         </div>
                                                         <div class="content">
-                                                            <a href="mailto:company@gmail.com">company@gmail.com</a>
+                                                            <a href="mailto:20sdevelopers4209@gmail.com">20sdevelopers4209@gmail.com</a>
                                                         </div>
                                                     </li>
                                                     <li>
@@ -132,7 +132,7 @@
                                                             </svg>
                                                         </div>
                                                         <div class="content">
-                                                            <span>Ranelagh Place, Liverpool, L3 5UL, England</span>
+                                                            <span>Pnavel, Navi Mumbai, India</span>
                                                         </div>
                                                     </li>
                                                     <li>
@@ -143,7 +143,7 @@
                                                             </svg>
                                                         </div>
                                                         <div class="content">
-                                                            <span>7 Days a week <br> from 10-00 am to 6-00 pm</span>
+                                                            <span>24 X Service</span>
                                                         </div>
                                                     </li>
                                                 </ul>
@@ -177,10 +177,7 @@
                                         <p>We offer solutions for businesses of all sizes. For questions about our plans and products,,
                                             contact our team of experts. <a href="contact.html">Get in touch</a></p>
                                     </div>
-                                    <div class="content-bottom">
-                                        <a href="contact.html">Support</a>
-                                        <a href="contact.html">Documentation</a>
-                                    </div>
+                                    
                                 </div>
                             </div>
                         </div>
@@ -208,7 +205,7 @@
                         </div>
                         <div class="col-lg-6">
                             <div class="banner-content">
-                                <span class="sub-title wow fadeInUp" data-wow-delay=".2s">Amazing <strong>Starts</strong> Here</span>
+                                <span class="sub-title wow fadeInUp" data-wow-delay=".2s"><strong>20s</strong> Developers</span>
                                 <h2 class="title wow fadeInUp" data-wow-delay=".4s">Grow Your Business Using Our Services</h2>
                                 <a href="contact.html" class="btn wow fadeInUp" data-wow-delay=".6s">Contact Us <span></span></a>
                             </div>
@@ -237,8 +234,8 @@
                                     <img src="assets/img/icon/services_icon01.png" alt="">
                                 </div>
                                 <div class="services-content">
-                                    <h4 class="title"><a href="services-details.html">UIUX Design</a></h4>
-                                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                                    <h4 class="title"><a href="services-details.html">Business Growth Solutions</a></h4>
+                                    <p>Empowering Your Business Journey.</p>
                                 </div>
                             </div>
                         </div>
@@ -248,8 +245,8 @@
                                     <img src="assets/img/icon/services_icon02.png" alt="">
                                 </div>
                                 <div class="services-content">
-                                    <h4 class="title"><a href="services-details.html">Product Design</a></h4>
-                                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                                    <h4 class="title"><a href="services-details.html">Specialized Product Development</a></h4>
+                                    <p>Tailored Solutions for Your Unique Needs.</p>
                                 </div>
                             </div>
                         </div>
@@ -259,8 +256,8 @@
                                     <img src="assets/img/icon/services_icon03.png" alt="">
                                 </div>
                                 <div class="services-content">
-                                    <h4 class="title"><a href="services-details.html">Website Design</a></h4>
-                                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                                    <h4 class="title"><a href="services-details.html">High-Quality UI & Mobile Apps</a></h4>
+                                    <p>Design and Functionality at Its Best.</p>
                                 </div>
                             </div>
                         </div>
@@ -270,8 +267,8 @@
                                     <img src="assets/img/icon/services_icon04.png" alt="">
                                 </div>
                                 <div class="services-content">
-                                    <h4 class="title"><a href="services-details.html">Branding Design</a></h4>
-                                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                                    <h4 class="title"><a href="services-details.html">AI & ML Models & NLP Solutions</a></h4>
+                                    <p>Innovating with Intelligence.</p>
                                 </div>
                             </div>
                         </div>
@@ -287,24 +284,24 @@
                         <div class="row align-items-center justify-content-center">
                             <div class="col-46 order-0 order-lg-2">
                                 <div class="about-img text-end">
-                                    <img src="assets/img/images/about_img.jpg" alt="">
+                                    <img src="assets/img/images/about_img.png" alt="">
                                 </div>
                             </div>
                             <div class="col-54">
                                 <div class="about-content">
                                     <div class="section-title mb-25">
-                                        <span class="sub-title">About Company</span>
-                                        <h2 class="title">A Full Service Design and Branding Agency</h2>
+                                        <span class="sub-title">About 20s Developers</span>
+                                        <h2 class="title">Your Technology Partner</h2>
                                     </div>
-                                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard.</p>
+                                    <p>20s Developers delivers innovative web, mobile, and custom software solutions to drive your business forward. We specialize in high-performance designs with a focus on user experience and efficiency.</p>
                                     <ul class="list-wrap">
                                         <li>
                                             <div class="icon">
                                                 <img src="assets/img/icon/about_icon01.png" alt="">
                                             </div>
                                             <div class="content">
-                                                <h4 class="title">Concept Creation</h4>
-                                                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                                                <h4 class="title">Custom Solutions</h4>
+                                                <p>Tailored to Your Business Needs.</p>
                                             </div>
                                         </li>
                                         <li>
@@ -312,13 +309,13 @@
                                                 <img src="assets/img/icon/about_icon02.png" alt="">
                                             </div>
                                             <div class="content">
-                                                <h4 class="title">Sketch Drawing</h4>
-                                                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                                                <h4 class="title">Innovative Technology</h4>
+                                                <p>Shaping the Future with AI & ML.</p>
                                             </div>
                                         </li>
                                     </ul>
                                     <div class="about-content-bottom">
-                                        <span>Think Creative Agency Are a Full Service Design</span>
+                                        <span>We build the future with technology and creativity.</span>
                                         <div class="read-more-btn">
                                             <a href="about-us.html" class="btn">Read More <span></span></a>
                                         </div>
@@ -351,7 +348,7 @@
                                     <span class="sub-title">Our Team</span>
                                     <h2 class="title">An Essential Aspect of Creativity is Not Being Afraid to Fail</h2>
                                 </div>
-                                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard.</p>
+                                <p>At 20s Developers, our team consists of passionate innovators, developers, and strategists dedicated to delivering top-tier technology solutions.</p>
                                 <a href="team.html" class="btn">Meet Our Team <span></span></a>
                             </div>
                         </div>
