--- a/services-details.html
+++ b/services-details.html
@@ -119,7 +119,7 @@
                                                             </svg>
                                                         </div>
                                                         <div class="content">
-                                                            <a href="mailto:company@gmail.com">company@gmail.com</a>
+                                                            <a href="mailto:20sdevelopers4209@gmail.com">20sdevelopers4209@gmail.com</a>
                                                         </div>
                                                     </li>
                                                     <li>
@@ -130,7 +130,7 @@
                                                             </svg>
                                                         </div>
                                                         <div class="content">
-                                                            <span>Ranelagh Place, Liverpool, L3 5UL, England</span>
+                                                            <span>Pnavel, Navi Mumbai, India</span>
                                                         </div>
                                                     </li>
                                                     <li>
@@ -141,7 +141,7 @@
                                                             </svg>
                                                         </div>
                                                         <div class="content">
-                                                            <span>7 Days a week <br> from 10-00 am to 6-00 pm</span>
+                                                            <span>24 X Service</span>
                                                         </div>
                                                     </li>
                                                 </ul>
@@ -175,10 +175,7 @@
                                         <p>We offer solutions for businesses of all sizes. For questions about our plans and products,,
                                             contact our team of experts. <a href="contact.html">Get in touch</a></p>
                                     </div>
-                                    <div class="content-bottom">
-                                        <a href="contact.html">Support</a>
-                                        <a href="contact.html">Documentation</a>
-                                    </div>
+                                    
                                 </div>
                             </div>
                         </div>
